--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,4 @@
+client/node_modules
 .DS_Store
 node_modules
-/dist
-
-# local env files
-*.env
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.env
